--- a/main.css
+++ b/main.css
@@ -1,9 +1,13 @@
 /* external css file */
 body {
-    font-family: "Montserrat", sans-serif;;
+    font-family: "Montserrat", sans-serif;
+    margin:0;
 }
 #product-overview {
     background: #ff1b68;
+    padding : 20px;
+    border : 5px solid black;
+    margin : 20px;
 }
 
 #product-overview h1{
