--- a/main.css
+++ b/main.css
@@ -1,13 +1,20 @@
 /* external css file */
+*{
+    box-sizing: border-box;
+}
+
 body {
     font-family: "Montserrat", sans-serif;
     margin:0;
 }
 #product-overview {
     background: #ff1b68;
+    width: 100%;
+    height: 528px;
     padding : 20px;
     border : 5px solid black;
-    margin : 20px;
+    /* margin : 20px; */
+    box-sizing: border-box;
 }
 
 #product-overview h1{
