--- a/main.css
+++ b/main.css
@@ -1,28 +1,87 @@
 /* external css file */
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
 body {
-    font-family: "Montserrat", sans-serif;
-    margin:0;
+  font-family: "Montserrat", sans-serif;
+  margin: 0;
 }
 #product-overview {
-    background: #ff1b68;
-    width: 100%;
-    height: 528px;
-    padding : 20px;
-    border : 5px solid black;
-    /* margin : 20px; */
-    box-sizing: border-box;
+  background: url('freedom.jpg');
+  width: 100%;
+  height: 528px;
+  padding: 20px;
 }
 
-#product-overview h1{
-    color : white;
-    font-family: "Anton", sans-serif;  /* sans-serif is the default style we can see that in browser default*/
+#product-overview h1 {
+  color: white;
+  font-family: "Anton", sans-serif; /* sans-serif is the default style we can see that in browser default*/
 }
 
 .section-title {
-    color : #2ddf5c;
+  color: #2ddf5c;
 }
 
+/* addding header style */
+.main-header {
+  width: 100%;
+  background-color: #2ddf5c;
+  padding: 8px 16px;
+}
+
+.main-header__brand {
+  color: #0e4f1f;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 22px;
+}
+
+.main-header > div {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.main-nav {
+  display: inline-block;
+  width: calc(100% - 75px);
+  text-align: right;
+  vertical-align: middle;
+}
+
+.main-nav__items {
+  margin: 0;
+  padding: 0;
+}
+
+.main-nav__item {
+  display: inline-block;
+  margin: 0 12px;
+}
+
+.main-nav__item a {
+  text-decoration: none;
+  color: #0e4f1f;
+  padding: 3px 0;
+}
+
+.main-nav__item a:hover,
+.main-nav__item a:active {
+  color: white;
+  border-bottom: 5px solid white;
+}
+
+.main-nav__item--cta a {
+  color: white;
+  background-color: #ff1b68;
+  padding: 8px 16px;
+  border-radius: 8px;
+}
+
+.main-nav__item--cta a:hover,
+.main-nav__item--cta a:active
+{
+  background-color: white;
+  color: #ff1b68;
+  border: none;
+}
